<resources>
    <string name="app_name">Animu</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="anim_start">start</string>
    <string name="anim_cancel">cancel</string>
    <string name="launcher_jump">Jump</string>

    <string name="room_name">冠松操盘直播室</string>
    <string name="tag_one">如来神掌</string>
    <string name="tag_two">百战百胜步步为营</string>
    <string name="tag_three">曾经</string>
    <string name="tag_four">沧海</string>
    <string name="tag_five">难为水</string>
    <string name="short_content">Android SurfaceView实战 打造抽奖转盘luph11: 我分成了9个板块，获奖结果在4个板块中随机获取，求解怎么活到最后的获奖结果并存储起来？</string>

    <string name="option_introduce">1、Alpha量化股票池是经过量化模型计算（T日）出现F点的股票；\n\n
    2、Alpha量化股票池与每个交易日（T日）16:00-18:00更新，只要次日（T+1日）高开小鱼都可以买进\n\n
    3、3日（T + 3）内任何时间只要盈利超过一会说那个都可以考虑平仓直营；\n\n
    4、若樱里没有到达的股票，也需要在（T+3日）收盘前平仓</string>

    <string name="content">盼望着，盼望着，东风来了，春天的脚步近了。一切都像刚睡醒的样子，欣欣然张开了眼。山朗润起来了，水涨起来了，太阳的脸红起来了。
在朱自清所有的散文中，开篇就写得如此明朗、欢快、昂奋的作品，似乎还不多见。这不是一个不谙世事的青少年的作文，这是一个饱经忧患的中年知识分子的精心之作。作者所以有这样一种心境和情绪，一定是因为他走过了一段最阴暗的日子后，找到了一种柳暗花明的感觉。他是在借明媚的春光，抒发自己的一种心境。“盼望着，盼望着”，动词的叠用，显得突兀、有力、急切，隐含了他曾经的阴暗、苦闷岁月，以及在那煎熬中对未来的苦苦求索。现在光明终于降临到了眼前，他怎么能按捺住欢欣鼓舞的心情呢？“刚睡醒的样子，欣欣然张开了眼”，这是初春的朦胧景象，但又何尝不是他此时此刻的内心体验呢？
在作品中，朱自清展现的是一个欣欣向荣、多姿多彩、全方全位的春天。地上是大片大片嫩绿的小草，田野上是一棵一棵盛开的桃树、杏树、梨树，在如火如荼的花团中，飞舞着成群的蜜蜂、蝴蝶；在晴朗、温馨的天空中，吹拂着软和的杨柳风，氤氲着土香、草香、花香的气息，弥漫着各种鸟儿动听的乐曲，还有牧童嘹亮的笛声……作者在这里把大自然写活了、写足了、写透了，把大自然诗化了。在这一幅诗化的春景中，作者卸掉了一切的思想情感重负，一头扑入了这春的世界中，就像一个孩子投入了母亲的怀抱一样。他想在绿草如茵的草地上打滚、踢球、赛跑、游戏，尽情地体验生命的活泼与自由。他全身心地动用自己的视觉、嗅觉、听觉、想像、幻想，享受大自然的美好与抚爱。在这里，大自然是如此美好，人的生命也变得如此美好。在美的自然中，朱自清深切地体验到了生命的自由、活力和灿烂，展现了他赤子一般的情怀和天真无邪的个性。
但这种美丽的生命体验毕竟是暂时的、甚至是虚幻的。朱自清信奉“刹那主义”，并把它当做医治心灵创伤的良药，而他又深知自己作为一个知识分子肩上的重任，作为一个普通人还有许许多多不容推卸的义务。他要追寻一种有为、有价的人生，他要精心地、甚至是刻意地去完善自己的道德和人格。因此在《春》的后半部分，作品欢快的调子突然变得舒缓、沉静，出现了绵绵的春雨、朦胧的晚景、为生活行色匆匆的人们、辛勤劳作的农民。超然的自然景观巧妙地转换成了一幅现实图画，朱自清也从梦的世界回到了湿漉漉的土地上。“舒活舒活筋骨，抖擞抖擞精神，各做各的一份儿事去。”“‘一年之计在于春’，刚起头儿，有的是工夫，有的是希望。”朱自清在这里写的是春天里奔波和劳作的人们，更是写自己的心理、决心和希望。
文章写到这里，其实可以打住了。但朱自清却给了我们一个意想不到的结尾，使春天的意象变得更为完整、瑰丽，使朱自清的人生、人格变得更加耀人眼目。他连用三个比喻讴歌春天，把春天形容为新生的娃娃、美丽的姑娘、健壮的青年。使舒缓、沉静的格调蓦然刚健、清新起来，与作品的开头紧紧呼应；把滑向平实的现实情境又突然推进到了作品上半部分营造的那种明朗、欢快的意境中去，整个意境又连成了一片。春天的“新”、“美”、“力”，注入了朱自清的整个身心，朱自清也化入了整个春天，在春天的引领下执著前行。朱自清获得了“新生”。
在朱自清的全部散文中，《春》是风格演变特别明显的篇目。究竟是哪些原因促成了这种演变？这篇散文在朱自清的创作中具有哪些特别的意义？依然值得我们去探究。</string>

    <string name="long_string">盼望着，盼望着，东风\n\n来了，春天的脚步近了。一切都像刚睡醒的样子，欣欣然张开了眼。山朗润起来了，水涨起来了，太阳的脸红起来了。
在朱自清所有的散文中，开篇就写得如此明朗、欢快、昂奋的作品，似乎还不多见。这不是一个不谙世事的青少年的作文，这是一个饱经忧患的中年知识分子的精心之作。作者所以有这样一种心境和情绪，一定是因为他走过了一段最阴暗的日子后，找到了一种柳暗花明的感觉。他是在借明媚的春光，抒发自己的一种心境。“盼望着，盼望着”，动词的叠用，显得突兀、有力、急切，隐含了他曾经的阴暗、苦闷岁月，以及在那煎熬中对未来的苦苦求索。现在光明终于降临到了眼前，他怎么能按捺住欢欣鼓舞的心情呢？“刚睡醒的样子，欣欣然张开了眼”，这是初春的朦胧景象，但又何尝不是他此时此刻的内心体验呢？
在作品中，朱自清展现的是一个欣欣向荣、多姿多彩、全方全位的春天。地上是大片大片嫩绿的小草，田野上是一棵一棵盛开的桃树、杏树、梨树，在如火如荼的花团中，飞舞着成群的蜜蜂、蝴蝶；在晴朗、温馨的天空中，吹拂着软和的杨柳风，氤氲着土香、草香、花香的气息，弥漫着各种鸟儿动听的乐曲，还有牧童嘹亮的笛声……作者在这里把大自然写活了、写足了、写透了，把大自然诗化了。在这一幅诗化的春景中，作者卸掉了一切的思想情感重负，一头扑入了这春的世界中，就像一个孩子投入了母亲的怀抱一样。他想在绿草如茵的草地上打滚、踢球、赛跑、游戏，尽情地体验生命的活泼与自由。他全身心地动用自己的视觉、嗅觉、听觉、想像、幻想，享受大自然的美好与抚爱。在这里，大自然是如此美好，人的生命也变得如此美好。在美的自然中，朱自清深切地体验到了生命的自由、活力和灿烂，展现了他赤子一般的情怀和天真无邪的个性。
但这种美丽的生命体验毕竟是暂时的、甚至是虚幻的。朱自清信奉“刹那主义”，并把它当做医治心灵创伤的良药，而他又深知自己作为一个知识分子肩上的重任，作为一个普通人还有许许多多不容推卸的义务。他要追寻一种有为、有价的人生，他要精心地、甚至是刻意地去完善自己的道德和人格。因此在《春》的后半部分，作品欢快的调子突然变得舒缓、沉静，出现了绵绵的春雨、朦胧的晚景、为生活行色匆匆的人们、辛勤劳作的农民。超然的自然景观巧妙地转换成了一幅现实图画，朱自清也从梦的世界回到了湿漉漉的土地上。“舒活舒活筋骨，抖擞抖擞精神，各做各的一份儿事去。”“‘一年之计在于春’，刚起头儿，有的是工夫，有的是希望。”朱自清在这里写的是春天里奔波和劳作的人们，更是写自己的心理、决心和希望。
文章写到这里，其实可以打住了。但朱自清却给了我们一个意想不到的结尾，使春天的意象变得更为完整、瑰丽，使朱自清的人生、人格变得更加耀人眼目。他连用三个比喻讴歌春天，把春天形容为新生的娃娃、美丽的姑娘、健壮的青年。使舒缓、沉静的格调蓦然刚健、清新起来，与作品的开头紧紧呼应；把滑向平实的现实情境又突然推进到了作品上半部分营造的那种明朗、欢快的意境中去，整个意境又连成了一片。春天的“新”、“美”、“力”，注入了朱自清的整个身心，朱自清也化入了整个春天，在春天的引领下执著前行。朱自清获得了“新生”。
在朱自清的全部散文中，《春》是风格演变特别明显的篇目。究竟是哪些原因促成了这种演变？这篇散文在朱自清的创作中具有哪些特别的意义？依然值得我们去探究。</string>

    <string name="title_activity_launcher">LauncherActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>


    <!-- CalendarView -->
    <string-array name="cowboy_weekdays">
        <item>日</item>
        <item>一</item>
        <item>二</item>
        <item>三</item>
        <item>四</item>
        <item>五</item>
        <item>六</item>
    </string-array>

    <string name="text_scroll">
        曾经沧海难为水\n
        除却巫山不是云\n
        天降小雨润如酥\n
        轻罗小扇扑流萤\n
        破屋麦边孤\n
        许是今生\n
        误把前生草踏青\n
        问卜怕听情未了\n
        停杯不饮待春来\n
        乍暖还寒\n
        可以有抽奖机会\n
        这是倒数第五行\n
        楼上说的可真是自信\n
        到不到数不得看我？\n
        此处终结\n
        楼上真是搞笑
    </string>

    <string name="update_content">更新内容</string>
    <string name="title_activity_constraint_layout">ConstraintLayoutActivity</string>
    <string name="shortcuts">shortcuts</string>
    <string name="setting">设置</string>
    <string name="setting_long">设置长标题</string>
    <string name="bottom_sheet_dialog_title">This is bottomSheetDialog title</string>
    <string name="tag_face">face</string>
    <string name="send">发送</string>
    <string name="list_page">列表页</string>

    <string-array name="stockTabTitlesShort">
        <item>日k</item>
        <item>周k</item>
        <item>月k</item>
    </string-array>

    <string-array name="stockTabTitles">
        <item>分时</item>
        <item>五日</item>
        <item>日k</item>
        <item>周k</item>
        <item>月k</item>
    </string-array>

    <!-- 测试多空图数据 -->
    <!-- 短线电波/大盘趋势 -->
    <string-array name="longShortShortWave">
        <item>1</item>
        <item>1</item>
        <item>1</item>
        <item>1</item>
        <item>0</item>
        <item>0</item>
        <item>1</item>
        <item>-1</item>
        <item>1</item>
        <item>1</item>
        <item>-1</item>
        <item>-1</item>
        <item>-1</item>
        <item>1</item>
        <item>1</item>
        <item>1</item>
        <item>1</item>
    </string-array>
    <!-- 强弱线/资金动能 -->
    <string-array name="strengthLine">
        <item>1</item>
        <item>10</item>
        <item>19</item>
        <item>20</item>
        <item>20</item>
        <item>9</item>
        <item>-15</item>
        <item>-13</item>
        <item>-19</item>
        <item>-21</item>
        <item>-11</item>
        <item>-21</item>
        <item>30</item>
        <item>0</item>
        <item>1</item>
        <item>9</item>
        <item>-15</item>
        <item>-13</item>
        <item>-19</item>
        <item>-21</item>
        <item>-11</item>
        <item>-1</item>
        <item>1</item>
        <item>9</item>
        <item>-15</item>
        <item>-13</item>
        <item>-19</item>
        <item>-21</item>
        <item>-11</item>
        <item>-21</item>
        <item>51</item>
        <item>16</item>
        <item>1</item>
        <item>10</item>
        <item>8</item>
        <item>16</item>
        <item>1</item>
        <item>10</item>
        <item>10</item>
        <item>8</item>
        <item>16</item>
        <item>1</item>
        <item>10</item>
        <item>8</item>
        <item>10</item>
        <item>8</item>
        <item>16</item>
        <item>1</item>
        <item>10</item>
        <item>10</item>
        <item>8</item>
    </string-array>

    <string name="title_activity_main_bg_view">MainBgViewActivity</string>
    <string name="changeValue">改变属性</string>
    <string name="inputMainPicUrl">please input MainActivity bg pic url</string>
    <string name="saveMainBgPicUrl">save url</string>
</resources>
